--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description"
         content="The only moderation bot you need!">
     <meta property="og:image" content="/img/newpizzabotlogo.jpg">
-    <meta name="theme-color" content="#5865f2fc">
+    <meta name="theme-color" content="#5865F2">
     <link rel="icon" href="/img/newpizzabotlogo.jpg">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/animations/fade.css">
