--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a class="Button"
             href="https://discord.com/oauth2/authorize?client_id=705539121099309076&scope=bot&permissions=201387030" target="_blank">Invite</a>
         <a class="Button" href="https://discord.gg/WZsA82dAR5" target="_blank">Support Server</a>
+        <a class="Button" href="https://gist.github.com/JayyDoesDev/443c57a35e07f4be77da9ff832ca0fb5" target="_blank">Privacy Policy</a>
         <a class="Button" href="https://lillian.jdd.codes" target="_blank">Lillian</a>
         <div>
             <div class="footer">
